# TidyPaper

./: README.md  background.js  manifest.json  options.css  options.html  options.js  pyproject.toml  test_output.txt
src/tidypaper/: __init__.py
src/tidypaper/cli/: main.py
src/tidypaper/cli/__pycache__/: __init__.cpython-310.pyc.2765151755872  main.cpython-310.pyc.2765151755872
src/tidypaper/core/: duplicate.py  executor.py  merger.py  naming.py  organizer.py  parser.py  resolver.py  scanner.py  undo.py
src/tidypaper/core/__pycache__/: duplicate.cpython-310.pyc.2765151755872  executor.cpython-310.pyc.1320478213424  executor.cpython-310.pyc.2634159680944  executor.cpython-310.pyc.2765151755872  merger.cpython-310.pyc.2765151755872  organizer.cpython-310.pyc.2765151755872  scanner.cpython-310.pyc.1945052179888  scanner.cpython-310.pyc.2765151755872  undo.cpython-310.pyc.2124752978736  undo.cpython-310.pyc.2765151755872
src/tidypaper/db/: database.py
src/tidypaper/db/__pycache__/: database.cpython-310.pyc.2765151755872
src/tidypaper/models/: __init__.py  config.py  operation.py  paper.py
src/tidypaper/providers/: arxiv_lookup.py  base.py  doi_lookup.py  openalex.py
src/tidypaper/providers/__pycache__/: __init__.cpython-310.pyc.2765151755872  arxiv_lookup.cpython-310.pyc.2765152024240  base.cpython-310.pyc.2765151755984  doi_lookup.cpython-310.pyc.2765151755984  openalex.cpython-310.pyc.2765151755984
src/tidypaper/utils/: filename.py
tests/unit/: test_apply_flow.py  test_duplicate.py  test_filename.py  test_naming.py  test_resolver.py  test_undo.py
